// Timeseries types for workflows

syntax = "proto3";

package workflows.v1;

import "workflows/v1/core.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

// TimeInterval is a message that represents a time interval, with a start and end time.
// copied from datasets/v1/datasets.proto until we figure out how to import across packages
message TimeInterval {
  google.protobuf.Timestamp start_time = 1; // Start time of the interval.
  google.protobuf.Timestamp end_time = 2; // End time of the interval.

  // Flag indicating whether the start time is exclusive. If true, the start time is not included in the interval.
  bool start_exclusive = 3;
  // Flag indicating whether the end time is inclusive. If true, the end time is included in the interval.
  bool end_inclusive = 4;
}

// DatapointInterval is a message that represents a datapoint interval, with a start and end datapoint.
message DatapointInterval {
  UUID start = 1;
  UUID end = 2;
}

// TimeseriesDatasetChunk is a message that represents a chunk of a timeseries dataset.
message TimeseriesDatasetChunk {
  UUID dataset_id = 1;
  UUID collection_id = 2;
  TimeInterval time_interval = 3;
  DatapointInterval datapoint_interval = 4;
  int32 branch_factor = 5;
  int32 chunk_size = 6;
  int64 datapoints_per_365_days = 7;
}

// TimeChunk is a message that represents a time interval and a chunk size.
message TimeChunk {
  TimeInterval time_interval = 1;
  google.protobuf.Duration chunk_size = 2;
}